--- a/public/index.ejs
+++ b/public/index.ejs
@@ -2,9 +2,19 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+
+		<link rel='stylesheet' href='./static/icons/style.css'>
+		<link rel='stylesheet' href='./styles/main.min.css'>
 	</head>
 
 	<body>
-		<p>Test</p>
+		<% include ./views/shared/nav %>
+
+		<main class='landing-page-content'>
+			<header class='landing-header'>
+				<img src='./static/images/header-xs.jpg'>
+				<div class='landing-header-overlay'></div>
+			</header>
+		</main>
 	</body>
 </html>
