--- a/public/static/icons/style.css
+++ b/public/static/icons/style.css
@@ -1,40 +1,78 @@
-.icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?261gf5');
+  src:  url('fonts/icomoon.eot?261gf5#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?261gf5') format('truetype'),
+    url('fonts/icomoon.woff?261gf5') format('woff'),
+    url('fonts/icomoon.svg?261gf5#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
-/* ==========================================
-Single-colored icons can be modified like so:
-.icon-name {
-  font-size: 32px;
-  color: red;
-}
-========================================== */
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-.icon-hourglass {
-  width: 0.65625em;
-}
-
-.icon-megaphone {
-  width: 1.25em;
-}
-
-.icon-streetsign {
-  width: 0.90625em;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-lightbulb {
-  width: 0.6875em;
+.icon-phone:before {
+  content: "\e901";
+}
+.icon-twitter:before {
+  content: "\e902";
+}
+.icon-hourglass:before {
+  content: "\e01f";
+}
+.icon-megaphone:before {
+  content: "\e021";
+}
+.icon-streetsign:before {
+  content: "\e029";
+}
+.icon-lightbulb:before {
+  content: "\e030";
+}
+.icon-beaker:before {
+  content: "\e03c";
+}
+.icon-genius:before {
+  content: "\e046";
+}
+.icon-mail-envelope-closed:before {
+  content: "\e900";
+}
+.icon-expand_less:before {
+  content: "\e5ce";
+}
+.icon-expand_more:before {
+  content: "\e5cf";
+}
+.icon-keyboard_arrow_right:before {
+  content: "\e315";
+}
+.icon-menu:before {
+  content: "\e5d2";
+}
+.icon-search:before {
+  content: "\e8b6";
+}
+.icon-sentiment_satisfied:before {
+  content: "\e813";
+}
+.icon-facebook:before {
+  content: "\ea90";
+}
+.icon-instagram:before {
+  content: "\ea92";
 }
 
-.icon-beaker {
-  width: 0.84375em;
-}
-
-.icon-genius {
-  width: 0.9375em;
-}
