--- a/public/static/sass/config/normalreset.sass
+++ b/public/static/sass/config/normalreset.sass
@@ -1,6 +1,7 @@
 html
 	box-sizing: border-box
 	overflow-y: scroll
+	overflow-x: hidden
 	-webkit-text-size-adjust: 100%
 	-ms-text-size-adjust: 100%
 
