Mobile styles for the landing page are almost finished. The diamond layout is going to be a bit hard to scale out..might need to think of an alternative solution

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,6 +4,7 @@
 		<meta charset='utf-8'>
 
 		<link rel='stylesheet' href='./static/icons/style.css'>
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans:400,600" rel="stylesheet">
 		<link rel='stylesheet' href='./styles/main.min.css'>
 	</head>
 
@@ -13,8 +14,230 @@
 		<main class='landing-page-content'>
 			<header class='landing-header'>
 				<img src='./static/images/header-xs.jpg'>
+				<div class='landing-header-extension'></div>
 				<div class='landing-header-overlay'></div>
+
+				<div class='landing-header-content'>
+					<h1>Oklahoma's Premier Smoke Shop</h1>
+					<p>An Evolving force in</p>
+					<hr>
+					<p>The sale of smoking</p>
+					<hr>
+					<p>Accessories</p>
+
+					<div class='landing-header-links'>
+						<a href='/'>
+							<button>
+								<span>Get in touch</span>
+							</button>
+						</a>
+
+						<a href='/'>
+							<button>
+								<span>Shop Now</span>
+								<span class='icon-keyboard_arrow_right'></span>
+							</button>
+						</a>
+					</div>
+
+				</div>
 			</header>
+
+			<div class='service-container'>
+				<div class='service-top-diamond'></div>
+
+				<div class='service-header'>
+					<h2>Services</h2>
+
+					<div class='service-header-underline'>
+						<div class='left-triangle'></div>
+						<div class='hex'></div>
+						<div class='right-triangle'></div>
+					</div>
+
+					<div class='service-header-text'>
+						<p>We aim to provide the community
+						with access to quality products without
+						turning out their pockets</p>
+					</div>
+				</div>
+
+				<div class='service-selections'>
+					<div class='selection-hexagon selection-hexagon-active'>
+						<div class='selection-icon'>
+							<span class='icon-genius'></span>
+						</div>
+					</div>
+
+
+					<div class='selection-hexagon'>
+						<div class='selection-icon'>
+							<span class='icon-megaphone'></span>
+						</div>
+					</div>
+
+					<div class='selection-hexagon'>
+						<div class='selection-icon'>
+							<span class='icon-lightbulb'></span>
+						</div>
+					</div>
+
+					<div class='selection-hexagon'>
+						<div class='selection-icon'>
+							<span class='icon-beaker'></span>
+						</div>
+					</div>
+				</div>
+
+				<div class='service-selected'>
+					<h2>Smoking Accessories</h2>
+
+					<p>At Evolution we offer a large assortment of products for any smoking needs. From bubblers to pipes we have something for you</p>
+
+					<div class='service-images'>
+						<div></div>
+						<div></div>
+					</div>
+
+					<a href='/'>
+						<button>
+							<span>See More</span>
+						</button>
+					</a>
+				</div>
+
+				<div class='service-bottom-diamond'></div>
+			</div>
+
+			<div class='landing-testimonials'>
+				<div class='landing-testimonial-header'>
+					<h2>Testimonials</h2>
+					<p>See what real people are saying about Evolution</p>
+
+					<div class='testimonial-display'>
+						<div class='single-testimonial'>
+							<div class='testimonial-cutout'></div>
+							<div class='testimonial-text'>
+								<blockquote>
+									This is a quote by someone who has come to evolution before and thought it was cool!
+								</blockquote>
+								<p> -- Some person</p>
+							</div>
+						</div>
+
+						<div class='single-testimonial'>
+							<div class='testimonial-cutout'></div>
+							<div class='testimonial-text'>
+								<blockquote>
+									This is a quote by someone who has come to evolution before and thought it was cool!
+								</blockquote>
+								<p> -- Some person</p>
+							</div>
+						</div>
+
+						<div class='single-testimonial'>
+							<div class='testimonial-cutout'></div>
+							<div class='testimonial-text'>
+								<blockquote>
+									This is a quote by someone who has come to evolution before and thought it was cool!
+								</blockquote>
+								<p> -- Some person</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class='landing-info'>
+				<div class='landing-info-overlay'></div>
+				<div class='landing-info-mobile'>
+					<div class='landing-about'>
+						<h2>About Us</h2>
+						<p>Evolution started as as a small, local-business
+						and with your help has expanded to five stores over the past ten years</p>
+						<a href='/'>-- Read more</a>
+					</div>
+
+					<div class='landing-locations'>
+						<h3>Locations</h3>
+						<div class='location'>
+							<p>7123 S 92nd E ave</p>
+							<p>Tulsa, Ok 74133</p>
+							<p><span class='icon-phone'></span>918-615-3344</p>
+						</div>
+
+						<div class='location'>
+							<p>7123 S 92nd E ave</p>
+							<p>Tulsa, Ok 74133</p>
+							<p><span class='icon-phone'></span>918-615-3344</p>
+						</div>
+						<div class='location'>
+							<p>7123 S 92nd E ave</p>
+							<p>Tulsa, Ok 74133</p>
+							<p><span class='icon-phone'></span>918-615-3344</p>
+						</div>
+						<div class='location'>
+							<p>7123 S 92nd E ave</p>
+							<p>Tulsa, Ok 74133</p>
+							<p><span class='icon-phone'></span>918-615-3344</p>
+						</div>
+						<div class='location'>
+							<p>7123 S 92nd E ave</p>
+							<p>Tulsa, Ok 74133</p>
+							<p><span class='icon-phone'></span>918-615-3344</p>
+						</div>
+					</div>
+
+					<div class='landing-hours'>
+						<h3>Hours</h3>
+						<p>All stores are open from</p>
+
+						<div>
+							<p>Mon-Sat: 10am - 9pm</p>
+							<p>Sun: 12pm - 6pm</p>
+							<p>Sun: 12pm - 9pm(Tulsa only)</p>
+						</div>
+					</div>
+
+					<div class='landing-newsletter'>
+						<h3>Signup for our Newsletter</h3>
+
+						<div class='newsletter-input'>
+							<input type='email' name='email' id='newsletter-email'>
+							<label>Email</label>
+							<button type='button' id='newsletter-submit'><span class='icon-mail-envelope-closed'></span></button>
+						</div>
+
+						<p>-- Find out the benefits of signing up <a href='/'>here</a></p>
+					</div>
+
+					<div class='landing-social'>
+						<h3>Follow us on Social Media!</h3>
+
+						<div class='landing-social-buttons'>
+							<a href='/'>
+								<button>
+									<span class='icon-facebook'></span>
+								</button>
+							</a>
+
+							<a href='/'>
+								<button>
+									<span class='icon-twitter'></span>
+								</button>
+							</a>
+
+							<a href='/'>
+								<button>
+									<span class='icon-instagram'></span>
+								</button>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
+
+		<% include ./views/shared/footer %>
 	</body>
 </html>
