--- a/public/static/sass/config/normalreset.sass
+++ b/public/static/sass/config/normalreset.sass
@@ -1,7 +1,5 @@
 html
 	box-sizing: border-box
-	overflow-y: scroll
-	overflow-x: hidden
 	-webkit-text-size-adjust: 100%
 	-ms-text-size-adjust: 100%
 
@@ -33,6 +31,7 @@ audio:not([controls])
 
 hr
 	overflow: visible
+	border: none
 
 article,
 aside,
