--- a/public/static/sass/views/shared/nav.sass
+++ b/public/static/sass/views/shared/nav.sass
@@ -26,14 +26,17 @@
 	align-items: center
 	justify-content: center
 
+	.nav-logo
+		color: #909ea8
+
 	.menu-icon
 		display: flex
 		align-items: center
 		justify-content: center
 		height: 40px
-		width: 40px
-		border-left: 1px solid rgba(0,0,0,0.3)
+		width: 50px
+		border-left: 1px solid #909ea8
 
 		i
-			font-size: 24px
+			font-size: 32px
 			color: #909ea8
