--- a/public/static/sass/views/pages/landing/header.sass
+++ b/public/static/sass/views/pages/landing/header.sass
@@ -1,12 +1,25 @@
+.landing-page-content
+	display: flex
+	flex-direction: column
+	justify-content: center
+
 .landing-header
 	position: relative
-	height: 600px
+	height: 900px
 	margin-top: -70px
 
 	img
 		width: 100%
-		height: 300px
+		height: 350px
 		transform: scaleX(-1)
+
+.landing-header-extension
+	position: absolute
+	top: 300px
+	left: 0
+	height: 600px
+	width: 100%
+	background: #000
 
 .landing-header-overlay
 	position: absolute
@@ -15,3 +28,83 @@
 	height: 100%
 	width: 100%
 	background: rgba(64, 67, 77, 0.9)
+
+.landing-header-content
+	position: absolute
+	top: 140px
+	left: 0
+	z-index: 100
+	width: 100%
+	text-align: center
+
+	h1
+		@include open()
+		font-weight: 600
+		font-size: 30px
+		line-height: 45px
+		letter-spacing: 3px
+		text-transform: uppercase
+		color: #d3d3d4
+		margin-bottom: 35px
+
+	p
+		@include lato
+		font-wiehgt: 300
+		font-size: 16px
+		line-height: 30px
+		letter-spacing: 2px
+		text-transform: uppercase
+		color: #909ea8
+
+.landing-header-links
+	display: flex
+	flex-direction: column
+	align-items: center
+	padding-top: 60px
+	padding-bottom: 80px
+	z-index: 100
+	width: 100%
+
+	a
+		text-decoration: none
+
+		&:nth-of-type(1)
+			margin-bottom: 45px
+
+			button
+				height: 45px
+				width: 150px
+				border: 1px solid #ed8f03
+				border-radius: 6px
+				background: linear-gradient(to bottom, #ffb75e 0%, #ed8f03 100%)
+				background:#ed8f03
+
+				span
+					@include open()
+					font-weight: 600
+					letter-spacing: 2px
+					font-size: 14px
+					text-transform: uppercase
+					color: #fff
+
+		&:nth-of-type(2)
+			button
+				display: flex
+				align-items: center
+				justify-content: center
+				height: 45px
+				width: 150px
+				border: 1px solid #fff
+				border-radius: 6px
+				background: transparent
+
+				span
+					@include open()
+					font-weight: 600
+					letter-spacing: 2px
+					font-size: 14px
+					text-transform: uppercase
+					color: #fff
+
+					&:nth-of-type(2)
+						font-size: 22px
