--- a/public/static/sass/config/normalreset.sass
+++ b/public/static/sass/config/normalreset.sass
@@ -2,10 +2,12 @@ html
 	box-sizing: border-box
 	-webkit-text-size-adjust: 100%
 	-ms-text-size-adjust: 100%
+	width: 100vw
 
 body
 	margin: 0
 	overflow-x: hidden
+	width: 100vw
 	-moz-osx-font-smoothing: grayscale
 	-webkit-font-smoothing: antialiased
 
