--- a/public/static/sass/views/pages/landing/services.sass
+++ b/public/static/sass/views/pages/landing/services.sass
@@ -10,6 +10,7 @@
 	margin-top: -120px
 	height: 320px
 	width: 335px
+	max-width: 100vw
 	overflow-x: hidden
 	background: #fff
 	transform: rotate(45deg)
@@ -17,6 +18,7 @@
 .service-bottom-diamond
 	height: 320px
 	width: 335px
+	max-width: 100vw
 	background: #fff
 	overflow-x: hidden
 	transform: rotate(45deg)
