--- a/public/static/sass/views/pages/landing/header.sass
+++ b/public/static/sass/views/pages/landing/header.sass
@@ -67,6 +67,7 @@
 
 	a
 		text-decoration: none
+		height: 45px
 
 		&:nth-of-type(1)
 			margin-bottom: 45px
@@ -113,3 +114,17 @@
 
 					&:nth-of-type(2)
 						font-size: 22px
+
+@media screen and (min-width: 490px)
+	.landing-header-links
+		flex-direction: row
+		align-items: center
+		justify-content: center
+
+		a
+			&:nth-of-type(1)
+				margin-bottom: 0
+				margin-right: 20px
+
+			&:nth-of-type(2)
+				margin-left: 20px
