Added the styles for the testimonial section

--- a/public/static/sass/views/pages/landing/testimonials.sass
+++ b/public/static/sass/views/pages/landing/testimonials.sass
@@ -73,4 +73,8 @@
 		text-align: right
 		padding-right: 15px
 
+@media screen and (min-width: 490px)
+	.landing-testimonials
+		padding-top: 340px
+
 
