Styled the landing page for the next viewport size

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -161,6 +161,7 @@
 
 					<div class='landing-locations'>
 						<h3>Locations</h3>
+						<div class='locations'>
 						<div class='location'>
 							<p>7123 S 92nd E ave</p>
 							<p>Tulsa, Ok 74133</p>
@@ -186,6 +187,7 @@
 							<p>7123 S 92nd E ave</p>
 							<p>Tulsa, Ok 74133</p>
 							<p><span class='icon-phone'></span>918-615-3344</p>
+						</div>
 						</div>
 					</div>
 
@@ -211,7 +213,9 @@
 
 						<p>-- Find out the benefits of signing up <a href='/'>here</a></p>
 					</div>
+				</div>
 
+				<div class='landing-info-non-mobile'>
 					<div class='landing-social'>
 						<h3>Follow us on Social Media!</h3>
 
