The styles for the next viewport up have been added to the header and services

--- a/public/static/sass/views/pages/landing/header.sass
+++ b/public/static/sass/views/pages/landing/header.sass
@@ -128,3 +128,12 @@
 
 			&:nth-of-type(2)
 				margin-left: 20px
+
+@media screen and (min-width: 640px)
+	.landing-header-content
+		h1
+			width: 90%
+			margin: 0 auto 25px auto
+
+		p
+			font-size: 18px
