--- a/public/static/sass/views/pages/landing/services.sass
+++ b/public/static/sass/views/pages/landing/services.sass
@@ -267,3 +267,24 @@
 		> div
 			height: 185px
 			width: 275px
+
+@media screen and (min-width: 640px)
+	.service-top-diamond
+		width: 480px
+		height: 480px
+		margin-top: -240px
+
+	.service-bottom-diamond
+		margin-bottom: -80px
+
+	.service-selected
+		p
+			width: 80%
+			margin: 0 auto
+			font-size: 18px
+			line-height: 32px
+
+	.service-images
+		> div
+			height: 210px
+			width: 320px
