Styles for the 640px viewport added

--- a/public/static/sass/views/pages/landing/testimonials.sass
+++ b/public/static/sass/views/pages/landing/testimonials.sass
@@ -77,4 +77,7 @@
 	.landing-testimonials
 		padding-top: 340px
 
+@media screen and (min-width: 640px)
+	.landing-testimonials
+		padding-top: 420px
 
