--- a/public/static/sass/views/pages/landing/services.sass
+++ b/public/static/sass/views/pages/landing/services.sass
@@ -288,3 +288,28 @@
 		> div
 			height: 210px
 			width: 320px
+
+@media screen and (min-width: 768px)
+	.service-top-diamond
+		height: 590px
+		width: 590px
+		margin-top: -265px
+
+	.service-bottom-diamond
+		height: 560px
+		width: 560px
+		margin-bottom: -100px
+
+	.service-header
+		margin-top: -540px
+
+	.service-header-text
+		margin-top: 100px
+
+	.service-selected
+		margin-bottom: -455px
+
+	.service-images
+		> div
+			height: 240px
+			width: 360px
