--- a/public/static/sass/views/pages/landing/testimonials.sass
+++ b/public/static/sass/views/pages/landing/testimonials.sass
@@ -81,3 +81,10 @@
 	.landing-testimonials
 		padding-top: 420px
 
+@media screen and (min-width: 748px)
+	.landing-testimonials
+		padding-top: 465px
+
+	.testimonial-cutout
+		border-left: 100px solid transparent
+		border-right: 100px solid transparent
