--- a/public/static/sass/views/pages/landing/services.sass
+++ b/public/static/sass/views/pages/landing/services.sass
@@ -1,4 +1,5 @@
 .service-container
+	position: relative
 	display: flex
 	flex-direction: column
 	align-items: center
@@ -7,13 +8,16 @@
 	margin-bottom: -180px
 
 .service-top-diamond
-	margin-top: -120px
-	height: 320px
-	width: 335px
-	max-width: 100vw
-	overflow-x: hidden
-	background: #fff
-	transform: rotate(45deg)
+	position: absolute
+	top: -100px
+	left: 0
+	width: 0
+	height: 0
+	border-left: 50vw solid transparent
+	border-right: 50vw solid transparent
+	border-bottom: 100px solid #fff
+	z-index: 200
+
 
 .service-bottom-diamond
 	height: 320px
@@ -29,7 +33,6 @@
 	flex-direction: column
 	align-items: center
 	width: 100%
-	margin-top: -230px
 	z-index: 105
 
 	h2
@@ -313,3 +316,7 @@
 		> div
 			height: 240px
 			width: 360px
+
+@media screen and (min-width: 1024px)
+	.service-top-diamond
+		display: none
