Almost all of the styles for the landing page are complete

--- a/public/static/sass/views/pages/landing/header.sass
+++ b/public/static/sass/views/pages/landing/header.sass
@@ -139,5 +139,10 @@
 			font-size: 18px
 
 @media screen and (min-width: 1024px)
+	.landing-header-content
+		h1
+			width: 40%
+			margin: 0 auto 35px auto
+
 	.landing-header-links
 		margin-bottom: 200px
