--- a/public/static/sass/views/shared/nav.sass
+++ b/public/static/sass/views/shared/nav.sass
@@ -41,3 +41,15 @@
 		i
 			font-size: 32px
 			color: #909ea8
+
+	.nav-search
+		display: flex
+		align-items: center
+		justify-content: center
+		height: 40px
+		width: 50px
+		cursor: pointer
+
+		span
+			font-size: 32px
+			color: #909ea8
