--- a/public/views/shared/nav.ejs
+++ b/public/views/shared/nav.ejs
@@ -10,7 +10,7 @@
 	<div class='nav-right'>
 		<div class='nav-item'>
 			<div class='nav-search'>
-				<div></div>
+				<span class='icon-search'></span>
 			</div>
 		</div>
 
