--- a/public/static/sass/views/pages/landing/info.sass
+++ b/public/static/sass/views/pages/landing/info.sass
@@ -35,8 +35,8 @@
 		margin-bottom: 20px
 
 	> p
-		@include lato
-		font-wiehgt: 300
+		@include lato()
+		font-weight: 300
 		font-size: 16px
 		line-height: 30px
 		letter-spacing: 2px
@@ -266,3 +266,71 @@
 	.landing-about
 		p
 			font-size: 17px
+
+@media screen and (min-width: 1024px)
+	.landing-info-mobile
+		display: none
+
+	.landing-info-non-mobile
+		display: flex
+		z-index: 101
+
+	.landing-info-column
+		z-index: 100
+
+	.landing-newsletter
+		padding-top: 90px
+
+	.landing-social
+		padding-top: 90px
+
+@media screen and (min-width: 1600px)
+	.landing-info-column
+		&.desktop-only
+			display: flex
+			flex-direction: column
+			padding-top: 60px
+
+			h3
+				@include lato()
+				font-weight: 300
+				letter-spacing: 2px
+				font-size: 24px
+				line-height: 33px
+				text-transform: uppercase
+				color: #d3d3d4
+				margin-bottom: 30px
+				text-align: center
+
+	.landing-tweet
+		display: flex
+		flex-direction: column
+		margin-bottom: 25px
+
+		p
+			@include lato()
+			font-weight: 300
+			letter-spacing: 1px
+			font-size: 14px
+			color: #909ea8
+
+	.tweet-container
+		display: flex
+		padding-bottom: 8px
+
+		button
+			border: none
+			background: none
+
+			span
+				font-size: 26px
+				color: #909ea8
+
+		> div
+			flex: 1
+			padding-left: 12px
+
+			p
+				font-size: 16px
+				line-height: 25px
+				color: #d3d3d4
