--- a/public/static/sass/views/pages/landing/services.sass
+++ b/public/static/sass/views/pages/landing/services.sass
@@ -5,28 +5,30 @@
 	align-items: center
 	width: 100%
 	background: transparent
-	margin-bottom: -180px
 
 .service-top-diamond
 	position: absolute
-	top: -100px
+	top: -150px
 	left: 0
 	width: 0
 	height: 0
 	border-left: 50vw solid transparent
 	border-right: 50vw solid transparent
-	border-bottom: 100px solid #fff
+	border-bottom: 150px solid #fff
+	z-index: 200
+
+.service-bottom-diamond
+	position: absolute
+	bottom: -150px
+	left: 0
+	width: 0
+	height: 0
+	border-left: 50vw solid transparent
+	border-right: 50vw solid transparent
+	border-top: 150px solid #fff
 	z-index: 200
 
 
-.service-bottom-diamond
-	height: 320px
-	width: 335px
-	max-width: 100vw
-	background: #fff
-	overflow-x: hidden
-	transform: rotate(45deg)
-	margin-bottom: 40px
 
 .service-header
 	display: flex
@@ -190,7 +192,6 @@
 	flex-direction: column
 	align-items: center
 	padding-top: 80px
-	margin-bottom: -180px
 	z-index: 35
 
 	h2
@@ -250,36 +251,12 @@
 		margin-bottom: 120px
 
 @media screen and (min-width: 490px)
-	.service-top-diamond
-		margin-top: -160px
-		width: 480px
-		height: 480px
-
-	.service-bottom-diamond
-		width: 480px
-		height: 480px
-		margin-bottom: 0
-
-	.service-header
-		margin-top: -410px
-
-	.service-selected
-		margin-bottom: -350px
-
 	.service-images
 		> div
 			height: 185px
 			width: 275px
 
 @media screen and (min-width: 640px)
-	.service-top-diamond
-		width: 480px
-		height: 480px
-		margin-top: -240px
-
-	.service-bottom-diamond
-		margin-bottom: -80px
-
 	.service-selected
 		p
 			width: 80%
@@ -293,30 +270,22 @@
 			width: 320px
 
 @media screen and (min-width: 768px)
-	.service-top-diamond
-		height: 590px
-		width: 590px
-		margin-top: -265px
-
-	.service-bottom-diamond
-		height: 560px
-		width: 560px
-		margin-bottom: -100px
-
-	.service-header
-		margin-top: -540px
-
-	.service-header-text
-		margin-top: 100px
-
-	.service-selected
-		margin-bottom: -455px
-
 	.service-images
 		> div
 			height: 240px
 			width: 360px
 
 @media screen and (min-width: 1024px)
-	.service-top-diamond
-		display: none
+	.service-images
+		width: 80%
+		margin: 0 auto
+		flex-direction: row
+
+		> div
+			flex: 1
+
+			&:nth-of-type(1)
+				margin-right: 5%
+
+			&:nth-of-type(2)
+				margin-left: 5%
