--- a/public/static/sass/views/pages/landing/testimonials.sass
+++ b/public/static/sass/views/pages/landing/testimonials.sass
@@ -3,7 +3,7 @@
 	flex-direction: column
 	align-items: center
 	width: 100%
-	padding-top: 290px
+	padding-top: 200px
 	padding-bottom: 70px
 	background: #d3d3d4
 
@@ -75,16 +75,32 @@
 
 @media screen and (min-width: 490px)
 	.landing-testimonials
-		padding-top: 340px
-
-@media screen and (min-width: 640px)
-	.landing-testimonials
-		padding-top: 420px
+		padding-top: 220px
 
 @media screen and (min-width: 748px)
-	.landing-testimonials
-		padding-top: 465px
-
 	.testimonial-cutout
 		border-left: 100px solid transparent
 		border-right: 100px solid transparent
+
+@media screen and (min-width: 1024px)
+	.testimonial-display
+		flex-direction: row
+		flex-wrap: wrap
+		width: 100%
+
+	.single-testimonial
+		flex: 1
+		margin-right: 4%
+		margin-left: 4%
+
+		&:nth-of-type(1)
+			margin-left: 0
+
+		&:nth-of-type(3)
+			margin-right: 0
+
+	.testimonial-cutout
+		border-left: 65px solid transparent
+		border-right: 65px solid transparent
+		border-top: 55px solid #d3d3d4
+
