--- a/public/static/sass/views/shared/footer.sass
+++ b/public/static/sass/views/shared/footer.sass
@@ -76,7 +76,9 @@
 				color: #fff
 
 .footer-copyright
+	position: relative
 	padding: 15px 0
+	z-index: 35
 
 	p
 		@include lato()
@@ -84,6 +86,7 @@
 		letter-spacing: 1px
 		font-size: 16px
 		color: #d3d3d4
+		text-align: center
 
 		span
 			color: #909ea8
@@ -95,3 +98,24 @@
 	.footer-links
 		a
 			font-size: 18px
+
+@media screen and (min-width: 1024px)
+	.footer-content
+		flex-direction: row
+		padding-left: 30px
+		padding-right: 30px
+		padding-bottom: 0
+
+	.footer-links
+		flex: 1
+
+	.footer-social
+		flex: 1
+		justify-content: flex-end
+
+		a
+			margin-right: 20px
+
+	.footer-copyright
+		padding-top: 8px
+		padding-bottom: 20px
