--- a/public/views/landing/header.ejs
+++ b/public/views/landing/header.ejs
@@ -27,5 +27,14 @@
 			</a>
 		</div>
 
+		<div class='landing-header-browse'>
+			<div class='landing-juice-drop'>
+				<div></div>
+			</div>
+
+			<h2>Browse</h2>
+			<div class='browse-decorator'></div>
+		</div>
+
 	</div>
 </header>
