Building the search feature. Have a cool idea for an animation

--- a/public/static/sass/views/shared/footer.sass
+++ b/public/static/sass/views/shared/footer.sass
@@ -35,7 +35,7 @@
 		text-decoration: none
 		margin-right: 10px
 		color: #909ea8
-		@include lato()
+		@include lato
 		font-weight: 300
 		letter-spacing: 1px
 		font-size: 16px
