--- a/public/views/landing/header.ejs
+++ b/public/views/landing/header.ejs
@@ -1,5 +1,5 @@
 <header class='landing-header'>
-	<img src='./static/images/header-xs.jpg'>
+	<img src='./static/images/header-large.jpg'>
 	<div class='landing-header-extension'></div>
 	<div class='landing-header-overlay'></div>
 
@@ -34,6 +34,24 @@
 
 			<h2>Browse</h2>
 			<div class='browse-decorator'></div>
+		</div>
+
+		<div class='landing-browse-links'>
+			<a href='/'>
+				<img src='./static/images/cigar.jpg'>
+			</a>
+
+			<a href='/'>
+				<img src='./static/images/ejuice.png'>
+			</a>
+
+			<a href='/'>
+				<img src='./static/images/lighter.png'>
+			</a>
+
+			<a href='/' class='health-icon'>
+				<img src='./static/images/health.png'>
+			</a>
 		</div>
 
 	</div>
