--- a/public/static/sass/views/pages/landing/header.sass
+++ b/public/static/sass/views/pages/landing/header.sass
@@ -5,19 +5,19 @@
 
 .landing-header
 	position: relative
-	height: 1000px
+	height: 1300px
 	margin-top: -70px
 
 	img
 		width: 100%
-		height: 350px
+		height: 450px
 		transform: scaleX(-1)
 
 .landing-header-extension
 	position: absolute
-	top: 300px
+	top: 400px
 	left: 0
-	height: 700px
+	height: 900px
 	width: 100%
 	background: #000
 
@@ -38,14 +38,15 @@
 	text-align: center
 
 	h1
-		@include open()
-		font-weight: 600
+		@include lato()
+		font-weight: 300
 		font-size: 30px
 		line-height: 45px
 		letter-spacing: 3px
 		text-transform: uppercase
 		color: #d3d3d4
 		margin-bottom: 35px
+		text-shadow: 0 1px 1px rgba(0,0,0,0.8)
 
 	p
 		@include lato
@@ -55,6 +56,7 @@
 		letter-spacing: 2px
 		text-transform: uppercase
 		color: #909ea8
+		text-shadow: 0 1px 1px rgba(0,0,0,0.5)
 
 .landing-header-links
 	display: flex
@@ -68,6 +70,7 @@
 	a
 		text-decoration: none
 		height: 45px
+		box-shadow: 0 3px 6px 0 rgba(0,0,0,0.3)
 
 		&:nth-of-type(1)
 			margin-bottom: 45px
@@ -120,6 +123,7 @@
 	flex-direction: column
 	align-items: center
 	width: 100%
+	padding-top: 70px
 
 	h2
 		margin-top: 30px
@@ -156,8 +160,29 @@
 		border-radius: 80% 0 55% 50% / 55% 0 80% 50%
 		text-overflow: clip
 
+.landing-browse-links
+	display: flex
+	flex-wrap: wrap
+	align-items: center
+	justify-content: center
+	padding-top: 60px
+
+	a
+		height: 70px
+		width: 70px
+		border-radius: 50%
+		margin-right: 10px
+
+		> img
+			height: 70px
+			width: 70px
+			border-radius: 50%
+
 
 @media screen and (min-width: 490px)
+	.landing-header-content
+		top: 200px
+
 	.landing-header-links
 		flex-direction: row
 		align-items: center
@@ -171,7 +196,24 @@
 			&:nth-of-type(2)
 				margin-left: 20px
 
+	.landing-header-browse
+		padding-top: 150px
+
+	.landing-browse-links
+		a
+			margin-right: 20px
+
 @media screen and (min-width: 640px)
+	.landing-header
+		height: 1350px
+
+		img
+			height: 700px
+
+	.landing-header-extension
+		top: 650px
+		height: 700px
+
 	.landing-header-content
 		h1
 			width: 90%
@@ -180,9 +222,76 @@
 		p
 			font-size: 18px
 
+	.landing-header-links
+		padding-top: 85px
+
+	.landing-header-browse
+		padding-top: 170px
+
+@media screen and (min-width: 768px)
+	.landing-header-content
+		h1
+			width: 60%
+			line-height: 48px
+			font-size: 35px
+			margin-bottom: 45px
+
+		p
+			font-size: 20px
+
 @media screen and (min-width: 1024px)
 	.landing-header-content
 		h1
-			width: 40%
+			width: 50%
 			margin: 0 auto 35px auto
+			font-size: 40px
+			line-height: 58px
 
+	.landing-header-links
+		a
+			height: 55px
+
+			&:nth-of-type(1),
+			&:nth-of-type(2)
+				button
+					height: 55px
+					width: 240px
+
+	.landing-browse-links
+		a
+			height: 85px
+			width: 85px
+
+			img
+				height: 85px
+				width: 85px
+
+@media screen and (min-width: 1600px)
+	.landing-header
+		img
+			height: 1000px
+
+	.landing-header-extension
+		top: 950px
+		height: 400px
+
+	.landing-header-content
+		h1
+			width: 40%
+			font-size: 52px
+			line-height: 58px
+			color: #fff
+
+	.landing-header-browse
+		padding-top: 60px
+
+	.landing-browse-links
+		a
+			height: 90px
+			width: 90px
+			margin-right: 40px
+			margin-left: 40px
+
+			img
+				height: 90px
+				width: 90px
