--- a/public/static/sass/views/pages/landing/services.sass
+++ b/public/static/sass/views/pages/landing/services.sass
@@ -117,7 +117,6 @@
 	margin: 0 auto
 	z-index: 35
 
-
 .selection-hexagon
 	display: flex
 	align-items: center
@@ -289,3 +288,9 @@
 
 			&:nth-of-type(2)
 				margin-left: 5%
+
+@media screen and (min-width: 1600px)
+	.service-header
+		h2
+			font-size: 40px
+			color: #666
