--- a/public/views/shared/nav.ejs
+++ b/public/views/shared/nav.ejs
@@ -8,7 +8,7 @@
 	</div>
 
 	<div class='nav-right'>
-		<div class='nav-item'>
+		<div class='nav-item nav-item-search'>
 			<div class='nav-search-container'>
 				<div class='nav-search-bar'>
 					<input type='text' name='query' class='search-box' id='nav-autocomplete'>
