Added landing icon hovers

--- a/public/views/landing/header.ejs
+++ b/public/views/landing/header.ejs
@@ -39,18 +39,22 @@
 		<div class='landing-browse-links'>
 			<a href='/'>
 				<img src='./static/images/cigar.jpg'>
+				<p>Cigars</p>
 			</a>
 
 			<a href='/'>
 				<img src='./static/images/ejuice.png'>
+				<p>E-Cigs</p>
 			</a>
 
 			<a href='/'>
 				<img src='./static/images/lighter.png'>
+				<p>Smoke</p>
 			</a>
 
 			<a href='/' class='health-icon'>
 				<img src='./static/images/health.png'>
+				<p>Health</p>
 			</a>
 		</div>
 
