Added the working tabs to the landing page

--- a/public/views/landing/services.ejs
+++ b/public/views/landing/services.ejs
@@ -17,36 +17,38 @@
 		</div>
 	</div>
 
-	<div class='service-selections'>
-		<div class='selection-hexagon selection-hexagon-active'>
-			<div class='selection-icon'>
-				<span class='icon-genius'></span>
-			</div>
-		</div>
+	<div class='js-tab'>
+		<ul class='service-selections tab-list'>
+			<li class='selection-hexagon selection-hexagon-active tab-item'>
+				<a class='selection-icon tab-link' href='#tab-1'>
+					<span class='icon-genius'></span>
+				</a>
+			</li>
 
 
 
-		<div class='selection-hexagon'>
-			<div class='selection-icon'>
-				<span class='icon-megaphone'></span>
-			</div>
-		</div>
+			<li class='selection-hexagon tab-item'>
+				<a class='selection-icon tab-link' href='#tab-2'>
+					<span class='icon-megaphone'></span>
+				</a>
+			</li>
 
 
-		<div class='selection-hexagon'>
-			<div class='selection-icon'>
-				<span class='icon-lightbulb'></span>
-			</div>
-		</div>
+			<li class='selection-hexagon tab-item'>
+				<a class='selection-icon tab-link' href='#tab-3'>
+					<span class='icon-lightbulb'></span>
+				</a>
+			</li>
 
-		<div class='selection-hexagon'>
-			<div class='selection-icon'>
-				<span class='icon-beaker'></span>
-			</div>
-		</div>
-	</div>
+			<li class='selection-hexagon tab-item'>
+				<a class='selection-icon tab-link' href='#tab-4'>
+					<span class='icon-beaker'></span>
+				</a>
+			</li>
+		</ul>
+	
 
-	<div class='service-selected'>
+	<section class='service-selected tab-panel' id='tab-1'>
 		<h2>Smoking Accessories</h2>
 
 		<p>At Evolution we offer a large assortment of products for any smoking needs. From bubblers to pipes we have something for you</p>
@@ -61,6 +63,11 @@
 				<span>See More</span>
 			</button>
 		</a>
+	</section>
+
+	<section class='service-selected tab-panel' id='tab-2'>
+		<p>Tab 2 test</p>
+	</section>
 	</div>
 
 	<div class='service-bottom-diamond'></div>
