--- a/public/views/landing/header.ejs
+++ b/public/views/landing/header.ejs
@@ -38,21 +38,25 @@
 
 		<div class='landing-browse-links'>
 			<a href='/'>
+				<div class='icon-overlay'></div>
 				<img src='./static/images/cigar.jpg'>
 				<p>Cigars</p>
 			</a>
 
 			<a href='/'>
+				<div class='icon-overlay'></div>
 				<img src='./static/images/ejuice.png'>
 				<p>E-Cigs</p>
 			</a>
 
 			<a href='/'>
+				<div class='icon-overlay'></div>
 				<img src='./static/images/lighter.png'>
 				<p>Smoke</p>
 			</a>
 
 			<a href='/' class='health-icon'>
+				<div class='icon-overlay'></div>
 				<img src='./static/images/health.png'>
 				<p>Health</p>
 			</a>
