--- a/public/views/landing/services.ejs
+++ b/public/views/landing/services.ejs
@@ -19,7 +19,7 @@
 
 	<div class='js-tab'>
 		<ul class='service-selections tab-list'>
-			<li class='selection-hexagon selection-hexagon-active tab-item'>
+			<li class='selection-hexagon tab-item'>
 				<a class='selection-icon tab-link' href='#tab-1'>
 					<span class='icon-genius'></span>
 				</a>
