--- a/public/static/sass/views/pages/landing/header.sass
+++ b/public/static/sass/views/pages/landing/header.sass
@@ -50,12 +50,11 @@
 
 	p
 		@include lato
-		font-wiehgt: 300
+		font-weight: 300
 		font-size: 16px
 		line-height: 30px
 		letter-spacing: 2px
-		text-transform: uppercase
-		color: #909ea8
+		color: lighten(#5f98cf, 15%)
 		text-shadow: 0 1px 1px rgba(0,0,0,0.5)
 
 .landing-header-links
@@ -70,7 +69,6 @@
 	a
 		text-decoration: none
 		height: 45px
-		box-shadow: 0 3px 6px 0 rgba(0,0,0,0.3)
 
 		&:nth-of-type(1)
 			margin-bottom: 45px
@@ -79,10 +77,9 @@
 				height: 45px
 				width: 150px
 				border: 1px solid
-				border-color: #ed8f03
-				border-radius: 6px
-				background-color: #ed8f03
-				transition: background-color .3s ease-out, border-color .3s ease-out
+				border-color: rgba(0,0,0,0.2)
+				background-color: transparent
+				transition: background-color .4s ease-out
 
 				span
 					@include open()
@@ -90,33 +87,53 @@
 					letter-spacing: 2px
 					font-size: 14px
 					text-transform: uppercase
-					color: #fff
+					color: #d3d3d4
+					transition: color .4s ease-out
 
 				&:hover
-					background-color: darken(#ed8f03, 10%)
-					border-color: darken(#ed8f03, 10%)
+					background-color: #ffc801
+
+					span
+						color: #fff
 
 		&:nth-of-type(2)
 			button
 				display: flex
 				align-items: center
 				justify-content: center
-				height: 45px
+				position: relative
+				height: 47px
 				width: 150px
-				border: 1px solid #fff
-				border-radius: 6px
-				background: transparent
+				border: none
+				background: rgba(0,0,0,0.1)
+				transition: all .4s ease-out
 
 				span
+					display: inline-block
+					margin-top: -1px
+					margin-right: 8px
 					@include open()
-					font-weight: 600
+					font-weight: 400
 					letter-spacing: 2px
-					font-size: 14px
+					font-size: 15px
 					text-transform: uppercase
-					color: #fff
+					color: #e9e9e9
+					transition: color .4s ease
+					text-shadow: none
 
 					&:nth-of-type(2)
+						position: absolute
+						top: 12px
+						right: -7px
+						margin-top: 0
 						font-size: 22px
+						color: #fff
+
+				&:hover
+					background-color: #fff
+
+					span
+						color: #000
 
 .landing-header-browse
 	display: flex
@@ -147,7 +164,7 @@
 	justify-content: center
 	height: 65px
 	width: 65px
-	background-color: #5f98cf
+	background-color: lighten(#5f98cf, 15%)
 	border-radius: 80% 0 55% 50% / 55% 0 80% 50%
 	text-overflow: clip
 	transform: rotateZ(-45deg)
@@ -156,7 +173,7 @@
 		position: relative
 		height: 30px
 		width: 30px
-		background-color: rgba(0,0,0,0.5)
+		background-color: rgba(0,0,0,0.6)
 		border-radius: 80% 0 55% 50% / 55% 0 80% 50%
 		text-overflow: clip
 
@@ -167,12 +184,23 @@
 	justify-content: center
 	padding-top: 60px
 
+	.icon-overlay
+		position: absolute
+		height: 70px
+		width: 70px
+		border-radius: 50%
+		background: rgba(0,0,0,0.2)
+		transition: all .4s ease
+		z-index: 10
+
 	a
+		position: relative
 		height: 70px
 		width: 70px
 		border-radius: 50%
 		margin-right: 10px
 		text-decoration: none
+
 
 		> img
 			height: 70px
@@ -190,9 +218,14 @@
 			transition: all .4s ease-out
 
 		&:hover
+			.icon-overlay
+				background: transparent
+				
 			p
 				transform: translateY(0)
 				opacity: 1
+
+
 
 
 
@@ -297,7 +330,13 @@
 			width: 40%
 			font-size: 52px
 			line-height: 58px
+			margin-bottom: 65px
 			color: #fff
+
+		p
+			font-size: 24px
+			letter-spacing: 3px
+			line-height: 33px
 
 	.landing-header-browse
 		padding-top: 60px
