Added the working landing sidenav

--- a/public/static/sass/views/views.sass
+++ b/public/static/sass/views/views.sass
@@ -1,2 +1,10 @@
+body
+	transition: all .4s ease-out
+
+	&.sidenav-open
+		margin-left: 300px
+		overflow-y: hidden
+		background: rgba(0,0,0,0.3)
+
 @import "shared/shared"
 @import "pages/pages"
