--- a/public/views/shared/offside.ejs
+++ b/public/views/shared/offside.ejs
@@ -1,12 +1,45 @@
-<div class='sidenav-overlay'></div>
+
 <div class='sidenav-container'>
 	<div class='sidenav'>
 		<div class='sidenav-header'>
-			<p>Something here, lawl</p>
+			<button class='sidenav-close'>
+				<span>x</span>
+			</button>
+			<h3>Logo Here</h3>
 		</div>
 
 		<div class='sidenav-body'>
-			<p>Something here too</p>
+			<ul class='sidenav-links'>
+				<li>
+					<a href='/'>
+						<p>Home</p>
+					</a>
+				</li>
+
+				<li>
+					<a href='/'>
+						<p>About</p>
+					</a>
+				</li>
+
+				<li>
+					<a href='/'>
+						<p>Shop</p>
+					</a>
+				</li>
+
+				<li>
+					<a href='/'>
+						<p>Contact</p>
+					</a>
+				</li>
+
+				<li>
+					<a href='/'>
+						<p>News</p>
+					</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
