--- a/public/index.ejs
+++ b/public/index.ejs
@@ -11,6 +11,7 @@
 
 	<body>
 		<% include ./views/shared/nav %>
+		<% include ./views/shared/offside %>
 
 		<main class='landing-page-content'>
 			<% include ./views/landing/header %>
