Added a scripts task and minified the script

--- a/public/static/sass/views/pages/landing/header.sass
+++ b/public/static/sass/views/pages/landing/header.sass
@@ -316,6 +316,10 @@
 				height: 85px
 				width: 85px
 
+			.icon-overlay
+				height: 85px
+				width: 85px
+
 @media screen and (min-width: 1600px)
 	.landing-header
 		img
@@ -349,5 +353,9 @@
 			margin-left: 40px
 
 			img
+				height: 90px
+				width: 90px
+
+			.icon-overlay
 				height: 90px
 				width: 90px
