--- a/public/views/landing/info.ejs
+++ b/public/views/landing/info.ejs
@@ -57,7 +57,7 @@
 			<div class='newsletter-input'>
 				<input type='email' name='email' id='newsletter-email'>
 				<label>Email</label>
-				<button type='button' id='newsletter-submit'><span class='icon-mail-envelope-closed'></span></button>
+				<button type='button'><span class='icon-mail-envelope-closed'></span></button>
 			</div>
 
 			<p>-- Find out the benefits of signing up <a href='/'>here</a></p>
@@ -80,7 +80,7 @@
 				<div class='newsletter-input'>
 					<input type='email' name='email' id='newsletter-email'>
 					<label>Email</label>
-					<button type='button' id='newsletter-submit'><span class='icon-mail-envelope-closed'></span></button>
+					<button id='newsletter-submit'><span class='icon-mail-envelope-closed'></span></button>
 				</div>
 
 				<p>-- Find out the benefits of signing up <a href='/'>here</a></p>
@@ -242,4 +242,9 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+<div id='test-notification'>
+	<h3 class='notification-title'>Title</h3>
+	<p class='notification-text'>A notification text will go here</p>
 </div>
