--- a/public/views/shared/nav.ejs
+++ b/public/views/shared/nav.ejs
@@ -25,7 +25,7 @@
 				<i class='search-stick'></i>
 			</div>
 
-			<section class='nav-seach-results'>
+			<section class='search-results-list'>
 			</section>
 
 			<p class='no-results-message'>No results</p>
