Added a image optimization task

--- a/public/views/landing/header.ejs
+++ b/public/views/landing/header.ejs
@@ -1,5 +1,5 @@
 <header class='landing-header'>
-	<img src='./static/images/header-large.jpg'>
+	<img src='./images/header-large.jpg'>
 	<div class='landing-header-extension'></div>
 	<div class='landing-header-overlay'></div>
 
@@ -39,25 +39,25 @@
 		<div class='landing-browse-links'>
 			<a href='/'>
 				<div class='icon-overlay'></div>
-				<img src='./static/images/cigar.jpg'>
+				<img src='./images/cigar.jpg'>
 				<p>Cigars</p>
 			</a>
 
 			<a href='/'>
 				<div class='icon-overlay'></div>
-				<img src='./static/images/ejuice.png'>
+				<img src='./images/ejuice.png'>
 				<p>E-Cigs</p>
 			</a>
 
 			<a href='/'>
 				<div class='icon-overlay'></div>
-				<img src='./static/images/lighter.png'>
+				<img src='./images/lighter.png'>
 				<p>Smoke</p>
 			</a>
 
 			<a href='/' class='health-icon'>
 				<div class='icon-overlay'></div>
-				<img src='./static/images/health.png'>
+				<img src='./images/health.png'>
 				<p>Health</p>
 			</a>
 		</div>
